Use Airlift HTTP client